--- a/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
@@ -59,10 +59,10 @@
                                      Focusable="True"
                                      HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
                                      VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                                     common:TextElementAttached.PlaceHolder="{x:Null}"
+                                     Visibility="Collapsed"
                                      InputMethod.IsInputMethodEnabled="False"
                                      MaxLength="{TemplateBinding MaxLength}"
-                                     Visibility="Collapsed" />
+                                     common:TextElementAttached.PlaceHolder="{x:Null}" />
                             <DockPanel Grid.Column="1">
                                 <ToggleButton x:Name="PART_Icon"
                                               DockPanel.Dock="Right"
@@ -70,21 +70,21 @@
                                               Foreground="{TemplateBinding Foreground}"
                                               Background="Transparent"
                                               Margin="6,0" ToolTip="Show Password"
+                                              Visibility="{TemplateBinding pc:PasswordBoxAssistant.IsShowIcon, Converter={pt:BooleanToVisibilityConverter}}"
+                                              Style="{StaticResource ToggleButtonTransparentIconStyle}"
+                                              Effect="{x:Null}"
                                               common:FrameworkElementBaseAttached.IconGeometry="{DynamicResource LockGeometry}"
                                               common:FrameworkElementBaseAttached.IconHeight="{TemplateBinding common:FrameworkElementBaseAttached.IconHeight}"
-                                              common:FrameworkElementBaseAttached.IconWidth="{TemplateBinding common:FrameworkElementBaseAttached.IconWidth}"
-                                              Effect="{x:Null}"
-                                              Visibility="{TemplateBinding pc:PasswordBoxAssistant.IsShowIcon, Converter={pt:BooleanToVisibilityConverter}}"
-                                              Style="{StaticResource ToggleButtonTransparentIconStyle}" />
+                                              common:FrameworkElementBaseAttached.IconWidth="{TemplateBinding common:FrameworkElementBaseAttached.IconWidth}" />
                                 <Button x:Name="PART_ClearButton"
                                         BorderThickness="0"
                                         Foreground="{TemplateBinding Foreground}"
                                         Background="Transparent"
+                                        Style="{StaticResource ButtonTransparentIconStyle}"
+                                        Effect="{x:Null}"
                                         common:FrameworkElementBaseAttached.IconGeometry="{DynamicResource CloseCircleGeometry}"
                                         common:FrameworkElementBaseAttached.IconHeight="{TemplateBinding common:FrameworkElementBaseAttached.IconHeight, Converter={pt:ValueTranslateToDoubleConverter}, ConverterParameter=0.7}"
-                                        common:FrameworkElementBaseAttached.IconWidth="{TemplateBinding common:FrameworkElementBaseAttached.IconWidth, Converter={pt:ValueTranslateToDoubleConverter}, ConverterParameter=0.7}"
-                                        Effect="{x:Null}"
-                                        Style="{StaticResource ButtonTransparentIconStyle}">
+                                        common:FrameworkElementBaseAttached.IconWidth="{TemplateBinding common:FrameworkElementBaseAttached.IconWidth, Converter={pt:ValueTranslateToDoubleConverter}, ConverterParameter=0.7}">
                                     <Button.Visibility>
                                         <MultiBinding Converter="{common:TextFieldClearButtonVisibilityConverter}">
                                             <Binding Path="(common:TextElementAttached.IsAddClearButton)" RelativeSource="{RelativeSource Mode=TemplatedParent}" />
