--- a/CookPopularControl/Themes/ScrollViewerStyle.xaml
+++ b/CookPopularControl/Themes/ScrollViewerStyle.xaml
@@ -46,22 +46,22 @@
                                    Foreground="{TemplateBinding pc:ScrollBarAssistant.ScrollBarBrush}"
                                    Value="{TemplateBinding VerticalOffset}"
                                    Maximum="{TemplateBinding ScrollableHeight}"
-                                   pc:ScrollBarAssistant.IsShowScrollBarRepeatButton="{TemplateBinding pc:ScrollBarAssistant.IsShowScrollBarRepeatButton}"
-                                   pc:ScrollBarAssistant.ThumbInsideMargin="{TemplateBinding pc:ScrollBarAssistant.ThumbInsideMargin}"
+                                   Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"
+                                   Style="{StaticResource DefaultScrollBarStyle}"
                                    AutomationProperties.AutomationId="VerticalScrollBar" Orientation="Vertical"
                                    ViewportSize="{TemplateBinding ViewportHeight}"
-                                   Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"
-                                   Style="{StaticResource DefaultScrollBarStyle}" />
+                                   pc:ScrollBarAssistant.IsShowScrollBarRepeatButton="{TemplateBinding pc:ScrollBarAssistant.IsShowScrollBarRepeatButton}"
+                                   pc:ScrollBarAssistant.ThumbInsideMargin="{TemplateBinding pc:ScrollBarAssistant.ThumbInsideMargin}" />
                         <ScrollBar x:Name="PART_HorizontalScrollBar" Grid.Row="1" Grid.Column="0"
                                    Foreground="{TemplateBinding pc:ScrollBarAssistant.ScrollBarBrush}"
                                    Value="{TemplateBinding HorizontalOffset}"
                                    Maximum="{TemplateBinding ScrollableWidth}"
-                                   pc:ScrollBarAssistant.IsShowScrollBarRepeatButton="{TemplateBinding pc:ScrollBarAssistant.IsShowScrollBarRepeatButton}"
-                                   pc:ScrollBarAssistant.ThumbInsideMargin="{TemplateBinding pc:ScrollBarAssistant.ThumbInsideMargin}"
+                                   Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
+                                   Style="{StaticResource DefaultScrollBarStyle}"
                                    AutomationProperties.AutomationId="HorizontalScrollBar" Orientation="Horizontal"
                                    ViewportSize="{TemplateBinding ViewportWidth}"
-                                   Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
-                                   Style="{StaticResource DefaultScrollBarStyle}" />
+                                   pc:ScrollBarAssistant.IsShowScrollBarRepeatButton="{TemplateBinding pc:ScrollBarAssistant.IsShowScrollBarRepeatButton}"
+                                   pc:ScrollBarAssistant.ThumbInsideMargin="{TemplateBinding pc:ScrollBarAssistant.ThumbInsideMargin}" />
                         <Rectangle x:Name="PART_Corner" Grid.Row="1" Grid.Column="1"
                                    Fill="{TemplateBinding pc:ScrollBarAssistant.ScrollBarBrush}"
                                    Opacity="0.8"
