--- a/CookPopularControl/Themes/BaseStyle/SliderBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/SliderBaseStyle.xaml
@@ -193,14 +193,14 @@
                          Height="5"
                          Fill="{TemplateBinding Foreground}"
                          Margin="0,0,0,5"
-                         Placement="Top"
-                         Visibility="Collapsed" />
+                         Visibility="Collapsed"
+                         Placement="Top" />
                 <TickBar x:Name="BottomRightTick" Grid.Row="2"
                          Height="5"
                          Fill="{TemplateBinding Foreground}"
                          Margin="0,5,0,0"
-                         Placement="Bottom"
-                         Visibility="Collapsed" />
+                         Visibility="Collapsed"
+                         Placement="Bottom" />
                 <Border Grid.Row="1"
                         Height="{TemplateBinding common:ThumbAttached.ThumbHeight, Converter={pt:ValueTranslateToDoubleConverter}, ConverterParameter=0.25}"
                         Background="{TemplateBinding Foreground}"
@@ -269,14 +269,14 @@
                          Width="5"
                          Fill="{TemplateBinding Foreground}"
                          Margin="0,0,5,0"
-                         Placement="Left"
-                         Visibility="Collapsed" />
+                         Visibility="Collapsed"
+                         Placement="Left" />
                 <TickBar x:Name="BottomRightTick" Grid.Column="2"
                          Width="5"
                          Fill="{TemplateBinding Foreground}"
                          Margin="5,0,0,0"
-                         Placement="Right"
-                         Visibility="Collapsed" />
+                         Visibility="Collapsed"
+                         Placement="Right" />
                 <Border Grid.Column="1"
                         Width="{TemplateBinding common:ThumbAttached.ThumbWidth, Converter={pt:ValueTranslateToDoubleConverter}, ConverterParameter=0.25}"
                         Background="{TemplateBinding Foreground}"
