--- a/CookPopularControl/Themes/MessageDialogStyle.xaml
+++ b/CookPopularControl/Themes/MessageDialogStyle.xaml
@@ -65,9 +65,9 @@
                                         <Button Command="{x:Static SystemCommands.CloseWindowCommand}"
                                                 ToolTip="关闭"
                                                 HorizontalAlignment="Right" VerticalAlignment="Center"
-                                                common:FrameworkElementBaseAttached.IconGeometry="{DynamicResource CloseGeometry}"
+                                                Style="{StaticResource WindowIconButtonStyle}"
                                                 Cursor="Arrow" WindowChrome.IsHitTestVisibleInChrome="True"
-                                                Style="{StaticResource WindowIconButtonStyle}" />
+                                                common:FrameworkElementBaseAttached.IconGeometry="{DynamicResource CloseGeometry}" />
                                     </pc:SimpleGrid>
                                     <Grid Grid.Row="1">
                                         <Grid.ColumnDefinitions>
@@ -89,8 +89,8 @@
                                                       HorizontalScrollBarVisibility="Disabled">
                                             <TextBlock Text="{TemplateBinding Message}"
                                                        VerticalAlignment="Center"
-                                                       TextWrapping="Wrap"
-                                                       Style="{StaticResource MessageDialogTextBlockStyle}" />
+                                                       Style="{StaticResource MessageDialogTextBlockStyle}"
+                                                       TextWrapping="Wrap" />
                                         </ScrollViewer>
                                         <StackPanel x:Name="PART_Panel" Grid.Row="1" Grid.Column="0"
                                                     Grid.ColumnSpan="2"
