--- a/CookPopularControl/Themes/NumericUpDownStyle.xaml
+++ b/CookPopularControl/Themes/NumericUpDownStyle.xaml
@@ -41,15 +41,15 @@
                                      Focusable="{TemplateBinding Focusable}"
                                      HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
                                      VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                     InputMethod.IsInputMethodEnabled="False"
+                                     IsReadOnly="{TemplateBinding IsReadOnly}"
+                                     Validation.ErrorTemplate="{TemplateBinding Validation.ErrorTemplate}"
                                      common:FrameworkElementBaseAttached.CornerRadius="{TemplateBinding common:FrameworkElementBaseAttached.CornerRadius}"
                                      common:FrameworkElementBaseAttached.IconHeight="{TemplateBinding common:FrameworkElementBaseAttached.IconHeight}"
                                      common:FrameworkElementBaseAttached.IconMargin="0"
                                      common:FrameworkElementBaseAttached.IconWidth="{TemplateBinding common:FrameworkElementBaseAttached.IconWidth}"
                                      common:TextElementAttached.IsAddClearButton="{TemplateBinding common:TextElementAttached.IsAddClearButton}"
-                                     common:TextElementAttached.PlaceHolder="{TemplateBinding common:TextElementAttached.PlaceHolder}"
-                                     InputMethod.IsInputMethodEnabled="False"
-                                     IsReadOnly="{TemplateBinding IsReadOnly}"
-                                     Validation.ErrorTemplate="{TemplateBinding Validation.ErrorTemplate}" />
+                                     common:TextElementAttached.PlaceHolder="{TemplateBinding common:TextElementAttached.PlaceHolder}" />
                             <UniformGrid Grid.Column="1"
                                          Rows="2"
                                          Margin="{TemplateBinding pc:NumericUpDownAssistant.UpDownButtonMargin}"
@@ -60,20 +60,20 @@
                                         Foreground="{TemplateBinding pc:NumericUpDownAssistant.UpDownButtonBrush}"
                                         Command="{x:Static pc:NumericUpDown.PlusCommand}"
                                         Focusable="False"
+                                        Style="{DynamicResource ButtonTransparentIconStyle}"
                                         common:FrameworkElementBaseAttached.IconGeometry="{DynamicResource UpSingleGeometry}"
                                         common:FrameworkElementBaseAttached.IconHeight="{TemplateBinding common:FrameworkElementBaseAttached.IconHeight}"
-                                        common:FrameworkElementBaseAttached.IconWidth="{TemplateBinding common:FrameworkElementBaseAttached.IconWidth}"
-                                        Style="{DynamicResource ButtonTransparentIconStyle}" />
+                                        common:FrameworkElementBaseAttached.IconWidth="{TemplateBinding common:FrameworkElementBaseAttached.IconWidth}" />
                                 <Button x:Name="PART_SubtractButton"
                                         Width="{TemplateBinding common:FrameworkElementBaseAttached.IconHeight}"
                                         Height="{TemplateBinding common:FrameworkElementBaseAttached.IconWidth}"
                                         Foreground="{TemplateBinding pc:NumericUpDownAssistant.UpDownButtonBrush}"
                                         Command="{x:Static pc:NumericUpDown.SubtractCommand}"
                                         Focusable="False"
+                                        Style="{StaticResource ButtonTransparentIconStyle}"
                                         common:FrameworkElementBaseAttached.IconGeometry="{DynamicResource DownSingleGeometry}"
                                         common:FrameworkElementBaseAttached.IconHeight="{TemplateBinding common:FrameworkElementBaseAttached.IconHeight}"
-                                        common:FrameworkElementBaseAttached.IconWidth="{TemplateBinding common:FrameworkElementBaseAttached.IconWidth}"
-                                        Style="{StaticResource ButtonTransparentIconStyle}" />
+                                        common:FrameworkElementBaseAttached.IconWidth="{TemplateBinding common:FrameworkElementBaseAttached.IconWidth}" />
                             </UniformGrid>
                         </Grid>
                     </Border>
