--- a/CookPopularControl/Themes/BaseStyle/TextBoxBaseBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/TextBoxBaseBaseStyle.xaml
@@ -9,6 +9,8 @@
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/ButtonStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
+    <pc:TextBlockEllipsisPaddingConverter x:Key="TextBlockEllipsisPaddingConverter" />
+
     <Style x:Key="TextBoxBaseBaseStyle" TargetType="{x:Type TextBoxBase}" BasedOn="{StaticResource InputControlBaseStyle}">
         <Setter Property="MinHeight" Value="22" />
         <Setter Property="AllowDrop" Value="true" />
@@ -17,8 +19,8 @@
         <Setter Property="CaretBrush" Value="{DynamicResource PrimaryForegroundBrush}" />
         <Setter Property="KeyboardNavigation.TabNavigation" Value="None" />
         <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst" />
-        <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden" />
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden" />
+        <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden" />
         <Setter Property="Stylus.IsFlicksEnabled" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
@@ -51,12 +53,11 @@
                                        Visibility="Collapsed"
                                        TextAlignment="{TemplateBinding HorizontalContentAlignment}"
                                        TextTrimming="CharacterEllipsis" />
-                            <!--  添加Margin防止失去焦点时文本内容抖动  -->
+                            <!--  添加TextBlockEllipsisPaddingConverter防止失去焦点时文本内容抖动  -->
                             <TextBlock x:Name="PART_Ellipsis"
                                        Text="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=TextBox}, Path=Text}"
                                        Foreground="{TemplateBinding Foreground}"
-                                       Margin="2,1"
-                                       Padding="{TemplateBinding Padding}"
+                                       Padding="{TemplateBinding Padding, Converter={StaticResource TextBlockEllipsisPaddingConverter}, ConverterParameter=2}"
                                        SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                                        ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}"
                                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
